Fix <code> overflow on narrow sizes

--- a/style.css
+++ b/style.css
@@ -46,6 +46,7 @@ button:hover {
 }
 
 code {
+    display: block;
     background-color: black;
     color: white;
     padding: 1%;
